--- a/CryptoWheelSpin/requirements.txt
+++ b/CryptoWheelSpin/requirements.txt
@@ -9,6 +9,10 @@ cryptography==3.4.7
 daphne==3.0.2
 dateparser==1.0.0
 Django==3.2.2
+django-coinpayments==0.1.3
+django-crispy-forms==1.11.2
+django-mathfilters==1.0.0
+django-model-utils==4.1.1
 humanize==3.5.0
 hyperlink==21.0.0
 idna==3.1
